--- a/symfony/templates/season/edit.html.twig
+++ b/symfony/templates/season/edit.html.twig
@@ -14,7 +14,7 @@
 <div class="flex flex-col">
     {{ form_row(form.number, {
         'attr': { 'class': 'p-0.5 px-2 text-black rounded mx-2'},
-        'label': 'Nunméro de saison',
+        'label': 'Numéro de saison',
     }) }}
 <button class="bg-green-500 w-max px-4 p-1 rounded mx-auto mt-5">{{ button_label|default('Mettre à jour la série') }}</button>
 </div>
