--- a/symfony/templates/series/edit.html.twig
+++ b/symfony/templates/series/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="flex mx-auto w-4/5 justify-center justify-around">
+    <div class="flex mx-auto w-4/5 justify-center justify-around mb-10">
     {{ form_start(form) }}
         {{ form_row(form.title, {
             'attr':{ 'class': 'flex p-0.5 px-2 mb-2 w-full rounded font-semibold'},
