--- a/symfony/templates/episode/_form.html.twig
+++ b/symfony/templates/episode/_form.html.twig
@@ -1,3 +1,20 @@
 
+{{ form_start(form) }}
+<div class="flex justify-center items-center text-black  mt-10 flex-col">
+    {{ form_row(form.number, {
+        'attr': { 'class': 'flex mb-2'},
+        'label': 'Numéro de saison',
+    }) }}
+    {{ form_row(form.title, {
+        'attr': { 'class': 'flex mb-2'},
+        'label': "Titre de l'épisode",
+    }) }}
+    {{ form_row(form.date, {
+        'attr': { 'class': 'flex mb-2'},
+        'label': "Date de sortie",
+    }) }}
+    <button class="w-max bg-green-500 px-5 text-xl  p-1 rounded mb-2 mt-5">{{ button_label|default("Ajouter l'épisode") }}</button>
+</div>
+{{ form_end(form) }}
 
 
